<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MAA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Button_login">Zaloguj</string>
    <string name="Button_admin1">Admin</string>
    <string name="counter">0</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Haslo</string>
    <string name="title_activity_maa">M.A.A.</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_main_menu">Mini-aplikacje</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_moving_text">MovingText</string>
    <string name="hint_moving_text">Polecenie</string>
    <string name="ready">Gotowe</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="moving_text_output">Wyjście</string>
    <string name="on">Typ: hasło</string>
    <string name="off">Typ: tekst</string>
    <string name="main_menu">Menu główne</string>
    <string name="title_activity_time">Time</string>
    <string name="chronometer">Czasomierz</string>
    <string name="time">Ile czasu upłynęło od godziny:</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="title_activity_email">Email</string>
    <string name="mail_email">Adres(y) e-mail</string>
    <string name="mail_send">Wyślij</string>
    <string name="mail_subject">Temat</string>
    <string name="mail_msg1">Wstep</string>
    <string name="mail_msg2">Rozwiniecie</string>
    <string name="mail_msg3">Zakończenie</string>
    <string name="mail_msg4">PS</string>
    <string name="title_activity_photo">Photo</string>
    <string name="photo_button">Ustaw jako tapete</string>
    <string name="title_activity_send">Send</string>
    <string name="title_activity_get">Get</string>
    <string name="Send_start_act">Start Activity</string>
    <string name="Send_start_act_for_res">Start Activity For Result</string>
    <string name="menu_preferences_str">Ustawienia</string>
    <string name="menu_about_us_str">O aplikacji</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="about_content">R.P. based on tutorial. Application for learning.</string>
    <string name="title_activity_prefs">Prefs</string>
    <string name="menu_exit_str">Wyjscie</string>
    <string name="title_activity_sqlite_example">SQLiteExample</string>
    <string name="name">Imię</string>
    <string name="hotness_1_to_10">Ocena 1-10</string>
    <string name="update_sqlite_database">Aktualizuj bazę SQLite</string>
    <string name="view">Zobacz</string>
    <string name="title_activity_sqlview">SQLView</string>
    <string name="names">Imiona</string>
    <string name="hotness">Atrakcyjność</string>
    <string name="get_info">Info</string>
    <string name="edit_entry">Edytuj wpis</string>
    <string name="delete_entry">Usuń wpis</string>
    <string name="give_row_id">Podaj ID</string>
    <string name="title_activity_accelerate">Accelerate</string>

</resources>