<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:weightSum="100" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="25" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mail_e_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_email"
                android:textColor="@color/white"
                android:textSize="@dimen/mail_text_size" />

            <EditText
                android:id="@+id/mail_editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="14"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/mail_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_subject"
                android:textColor="@color/white"
                android:textSize="@dimen/mail_text_size" />

            <EditText
                android:id="@+id/mail_editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="14"
                android:inputType="text" />

            <TextView
                android:id="@+id/mail_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_msg1"
                android:textColor="@color/white"
                android:textSize="@dimen/mail_text_size" />

            <EditText
                android:id="@+id/mail_editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="14"
                android:inputType="text" />

            <TextView
                android:id="@+id/mail_textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_msg2"
                android:textColor="@color/white"
                android:textSize="@dimen/mail_text_size" />

            <EditText
                android:id="@+id/mail_editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="14"
                android:inputType="text" />

            <TextView
                android:id="@+id/mail_textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_msg3"
                android:textColor="@color/white"
                android:textSize="@dimen/mail_text_size" />

            <EditText
                android:id="@+id/mail_editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="14"
                android:inputType="text" />

            <TextView
                android:id="@+id/mail_textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_msg4"
                android:textColor="@color/white"
                android:textSize="@dimen/mail_text_size" />

            <EditText
                android:id="@+id/mail_editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="14"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="40"
        android:orientation="vertical" >

        <Button
            android:id="@+id/mail_send"
            android:padding="@dimen/button_margin"
            android:layout_margin="@dimen/button_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/green"
            android:text="@string/mail_send"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="35"
        android:orientation="vertical" >

        <AnalogClock
            android:id="@+id/analogClock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>